fixing picture alignment

--- a/client/src/app/components/login-registration/login/login.component.scss
+++ b/client/src/app/components/login-registration/login/login.component.scss
@@ -1,6 +1,6 @@
 .form {
     float: right;
-    height: 610px;
+    height: 800px;
     background-image: linear-gradient(rgb(207, 223, 230), white);
     opacity: 0.98;
     width: 40%;
@@ -11,8 +11,8 @@
 
 .background {
     background-image: url("../../../../assets/cover-photo.jpg");
-    background-size: 1300px;
-    height: 700px;
+    background-size: 1510px;
+    height: 890px;
 }
 
 .loginUser {
